force-app/main/default/objects/Kinetic_Question__c/fields/AI_Guidance__c.field-meta.xml
<CustomField>
    <fullName>AI_Guidance__c</fullName>
    <description>AI Guidance text used to provide more context to ChatGPT API</description>
    <inlineHelpText>AI Guidance text used to provide more context to ChatGPT API</inlineHelpText>
    <label>AI Guidance</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>