force-app/main/default/objects/Kinetic_Question__c/fields/Assign_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Assign_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow user to capture and assign Tasks during inspection</description>
    <inlineHelpText>Enable to allow user to capture and assign Tasks during inspection</inlineHelpText>
    <label>Assign Tasks</label>
    <type>Checkbox</type>
</CustomField>