force-app/main/default/objects/Kinetic_Question__c/fields/Attach_Photos_or_Files__c.field-meta.xml
<CustomField>
    <fullName>Attach_Photos_or_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow user to capture Photo or Files during inspection</description>
    <inlineHelpText>Enable to allow user to capture Photo or Files during inspection</inlineHelpText>
    <label>Attach Photos or Files</label>
    <type>Checkbox</type>
</CustomField>