force-app/main/default/objects/Kinetic_Question__c/fields/Capture_Notes__c.field-meta.xml
<CustomField>
    <fullName>Capture_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to allow user to capture notes during inspection</description>
    <inlineHelpText>Enable to allow user to capture notes during inspection</inlineHelpText>
    <label>Capture Notes</label>
    <type>Checkbox</type>
</CustomField>