force-app/main/default/objects/Kinetic_Question__c/fields/Custom_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Custom_Question_Number__c</fullName>
    <label>Custom Question Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>