force-app/main/default/objects/Kinetic_Question__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Radio Button</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date &amp; Time</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>Net Promoter Score</fullName>
            </value>
            <value>
                <fullName>Geo Location</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Pass Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>