force-app/main/default/objects/Kinetic_Question__c/fields/Has_Followup_Questions__c.field-meta.xml
<CustomField>
    <fullName>Has_Followup_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Followup Questions</label>
    <type>Checkbox</type>
</CustomField>