force-app/main/default/objects/Kinetic_Question__c/fields/Is_Photo_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Photo_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Photo Mandatory</label>
    <type>Checkbox</type>
</CustomField>