force-app/main/default/objects/Kinetic_Question__c/fields/Parent_Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Option_Value__c</fullName>
    <label>Parent Option Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>