force-app/main/default/objects/Kinetic_Question__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Kinetic_Question__c</referenceTo>
    <relationshipName>Kinetic_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>