force-app/main/default/objects/Kinetic_Question__c/fields/Related_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_API_Name__c</fullName>
    <label>Related Field API Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Related_To_Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FirstName</fullName>
            </value>
            <value>
                <fullName>LastName</fullName>
            </value>
            <value>
                <fullName>MobilePhone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>AccountNumber</fullName>
            </value>
            <value>
                <fullName>Kinetics__Due_Amount__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>