force-app/main/default/objects/Kinetic_Question__c/fields/Related_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Object__c</fullName>
    <label>Related To Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>