force-app/main/default/objects/Kinetic_Question__c/fields/Show_Related_Info_As_a_Answer__c.field-meta.xml
<CustomField>
    <fullName>Show_Related_Info_As_a_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Related Info As a Answer</label>
    <type>Checkbox</type>
</CustomField>