force-app/main/default/objects/Kinetic_Question__c/fields/Show_Related_Info_In_Answer_As_ReadOly__c.field-meta.xml
<CustomField>
    <fullName>Show_Related_Info_In_Answer_As_ReadOly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Related Info In Answer As ReadOly</label>
    <type>Checkbox</type>
</CustomField>