force-app/main/default/objects/Kinetic_Question__c/fields/Show_Related_Info_In_Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Show_Related_Info_In_Question_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Related Info In Question Text</label>
    <type>Checkbox</type>
</CustomField>