force-app/main/default/objects/Kinetic_Question__c/fields/Take_Photo__c.field-meta.xml
<CustomField>
    <fullName>Take_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Photo</label>
    <type>Checkbox</type>
</CustomField>